@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,20 +21,10 @@
  * questions.
  */
 
-/*
- * @test
- * @bug 8231827
- * @summary Pattern variables are final so should be allowed to be referenced in an inner class
- * @compile --enable-preview -source ${jdk.version} PatternVariablesAreFinal2.java
- * @run main/othervm --enable-preview PatternVariablesAreFinal2
- */
-public class PatternVariablesAreFinal2 {
-    public static void main(String[] args) {
-        Object o = "42";
-        if (o instanceof String s) {
-            new Object() {
-                void run() { System.err.println(s); }
-            }.run();
-        }
+// key: compiler.err.instanceof.pattern.no.subtype
+
+class InstanceofPatternNoSubtype {
+    boolean test(Object o) {
+        return o instanceof Object obj;
     }
 }
